# BizDash

./: .gitignore  README.md  app.py  pyproject.toml
application/: controllers.py  database.py  functions.py  models.py
static/: style.css
templates/: base.html  index.html  new-client.html  new-order.html  new-partner.html  view-clients.html  view-partners.html
